2011-01-27  Andy Buckley  <andy@insectnation.org>

	* Adding ATLAS 2010 min bias and underlying event analyses and data.

2011-01-23  Andy Buckley  <andy@insectnation.org>

	* Make make-plots write out PDF rather than PS by default.

2011-01-12  Andy Buckley  <andy@insectnation.org>

	* Fix several rendering and comparison bugs in rivet-mkhtml.

	* Allow make-plots to write into an existing directory, at the
	user's own risk.

	* Make rivet-mkhtml produce PDF-based output rather than PS by
	default (most people want PDF these days). Can we do the same
	change of default for make-plots?

	* Add getAnalysisPlotPaths() function, and use it in compare-histos

	* Use proper .info file search path function internally in AnalysisInfo::make.

2011-01-11  Andy Buckley  <andy@insectnation.org>

	* Clean up ATLAS dijet analysis.

2010-12-30  Andy Buckley  <andy@insectnation.org>

	* Adding a run timeout option, and small bug-fixes to the event
	timeout handling, and making first event timeout work nicely with
	the run timeout. Run timeout is intended to be used in conjunction
	with timed batch token expiry, of the type that likes to make 0
	byte AIDA files on LCG when Grid proxies time out.

2010-12-21  Andy Buckley  <andy@insectnation.org>

	* Fix the cuts in the CDF 1994 colour coherence analysis.

2010-12-19  Andy Buckley  <andy@insectnation.org>

	* Fixing CDF midpoint cone jet algorithm default construction to
	have an overlap threshold of 0.5 rather than 0.75. This was
	recommended by the FastJet manual, and noticed while adding the
	ATLAS and CMS cones.

	* Adding ATLAS and CMS old iterative cones as "official" FastJets
	constructor options (they could always have been used by explicit
	instantiation and attachment of a Fastjet plugin object).

	* Removing defunct and unused ClosestJetShape projection.

2010-12-16  Andy Buckley  <andy@insectnation.org>

	* bin/compare-histos, pyext/lighthisto.py: Take ref paths from