@@ -1,3 +1,7 @@
+2011-01-31  Andy Buckley  <andy@insectnation.org>
+
+	* Don't sum photons around muons in the D0 2010 Z pT analysis.
+
 2011-01-27  Andy Buckley  <andy@insectnation.org>
 
 	* Adding ATLAS 2010 min bias and underlying event analyses and data.
